Enhance league-list component with LeagueCard subcomponent and open/close methods, and update main.scss to use CSS variables for primary color.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+:root {
+    --primary-color: #e41827;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -6,5 +10,5 @@ html, body {
 }
 
 .app {
-    background-color: aqua;
+    background-color: var(--primary-color);
 }
